# mint

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  dprint.json
apps/backend/: pyproject.toml
apps/backend/api/: admin.py  models.py  urls.py  views.py
apps/backend/api/migrations/: 0001_initial.py  0002_continent_map_mapleclass_mob_mobspawn_npc_and_more.py  0003_alter_craftingrecipe_options_and_more.py  0004_continent_api_contine_name_0daac9_idx_and_more.py
apps/backend/api/models/: __init__.py  base.py  guilds.py  mogul.py  users.py
apps/backend/api/serializers/: __init__.py  base.py  game_v1.py  v1.py
apps/backend/api/views/: game.py  guilds.py  mogul.py  users.py
apps/backend/frontend/: views.py
apps/backend/frontend/templates/: index.html
apps/backend/mint/: settings.py  urls.py
apps/mint/: .dockerignore  Dockerfile  README.md  manage.py  pyproject.toml
apps/mint/api/: admin.py
apps/mint/api/serializers/: __init__.py  game_v1.py  v1.py
apps/mint/api/views/: __init__.py  game.py  guilds.py  mogul.py  users.py
apps/mint/mint/: asgi.py  settings.py  urls.py  wsgi.py
apps/mint/minty_db/: admin.py  apps.py  urls.py  views.py
apps/mint/minty_db/migrations/: 0001_initial.py
apps/mint/minty_db/models/: __init__.py  base.py  characters.py  crafting.py  items.py  mobs.py  npcs.py  quests.py  world.py
apps/mint/minty_hq/: admin.py  apps.py  models.py  urls.py  views.py
apps/mint/minty_mogul/: admin.py  apps.py  models.py  urls.py  views.py
apps/mint/templates/: base.html  home.html
apps/mint/users/: admin.py  models.py
(+48 files in other folders)
