[project]
name = "backend"
version = "0.1.0"
description = "Mint - MapleStory auction house backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
    "django-vite>=3.1.0",
    "djangorestframework>=3.16.1",
    "drf-spectacular>=0.28.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.1.1",
]
